fix: adjust main margin for improved layout on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,7 +113,13 @@ nav {
 }
 
 main {
-  margin-top: 66px;
+  margin-top: 117px;
+}
+
+@media only screen and (min-width: 263px) {
+  main {
+    margin-top: 66px;
+  }
 }
 
 .brand-logo {
